--- a/WebRoot/WEB-INF/web.xml
+++ b/WebRoot/WEB-INF/web.xml
@@ -35,6 +35,13 @@
     <servlet-name>EventServlet</servlet-name>
     <servlet-class>com.AllGroup.Servlet.EventServlet</servlet-class>
   </servlet>
+  <servlet>
+    <description>This is the description of BUG's J2EE component</description>
+    <display-name>This is the display name of BUG's J2EE component</display-name>
+    <servlet-name>PostServlet</servlet-name>
+    <servlet-class>com.AllGroup.Servlet.PostServlet</servlet-class>
+  </servlet>
+
 
 
 
@@ -54,6 +61,10 @@
   <servlet-mapping>
     <servlet-name>EventServlet</servlet-name>
     <url-pattern>/servlet/EventServlet</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>PostServlet</servlet-name>
+    <url-pattern>/servlet/PostServlet</url-pattern>
   </servlet-mapping>
 
 </web-app>
