--- a/src/connection.properties
+++ b/src/connection.properties
@@ -1,3 +1,3 @@
 url=jdbc\:mysql\://localhost\:3306/allgroup?useUnicode\=true&characterEncoding\=UTF-8
-password=wx917915@CMU
+password=java
 user=root
